adding client pictures to the project

--- a/project/resources.html
+++ b/project/resources.html
@@ -34,12 +34,22 @@
                     https://www.pexels.com/es-es/foto/llamas-en-maras-18365720/
                 </a></li>
 
-            <li><strong>Author: </strong><a href="">
+            <li><strong>Author: Trace Hudson </strong><a href=""> Client-1 Image
+                    https://www.pexels.com/es-es/foto/foto-del-hombre-parado-cerca-de-la-llama-2424395/
 
                 </a></li>
-            <li><strong>Author: </strong><a href="">
+
+            <li><strong>Author:Andrea Piacquadio </strong><a href=""> Client-2 Image
+                    https://www.pexels.com/es-es/foto/mujer-en-camisa-con-cuello-774909/
 
                 </a></li>
+
+            <li><strong>Author: Moose Photos </strong><a href=""> Client-3 Image
+                    https://www.pexels.com/es-es/foto/mujer-sonriente-vistiendo-sueter-negro-1587009/
+
+                </a></li>
+
+
 
 
 
