--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -79,16 +79,54 @@
 
 
         </section>
-        <section class="location">
-            <h3>Our Office</h3>
-            <h3>Contact Information</h3>
-        </section>
-        <section class="contact">
-            <form>
-                <fieldset>
-                    <h3>Contact Us</h3>
-                    <legend></legend>
-                </fieldset>
+
+        <div class="contact-us-section">
+            <section class="location">
+
+                <h3>Our Office</h3>
+                <div class="map">
+
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.87891274922!2d-71.97102751675362!3d-13.524847562815566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916dd5d826598431%3A0x2aa996cc2318315d!2zQ3VzY28sIFBlcsO6!5e0!3m2!1ses-419!2sar!4v1749604276524!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+                </div>
+            </section>
+            <section class="company-info">
+                <h3>Contact Information</h3>
+
+                <p><strong>Address</strong> Manco Pac Avenue 9000, Cusco City, Peru</p>
+                <p><strong>Phone Number</strong> +59-9-8990098</p>
+                <p><strong>Email Address</strong> sales@cusco-travel-agency.com</p>
+            </section>
+
+        </div>
+
+        <!-- Contact Form -->
+
+
+        <section class="contact-form-section">
+            <h3>Contact Us</h3>
+            <form method="get" action="contact.html" class="contact-us"></form>
+            <fieldset>
+                <label>Chosen Tour</label>
+                <select class="tour-name" name="tour-name" required>
+                    <option value="">Select a Tour &#9662;</option>
+
+                </select>
+                <label>Date<input type="date" name="excursionDate" required> </label>
+
+
+                <label> Name*<input type="text" name="name" required></label>
+
+                <label> Leave us your message (optional)<input type="text" name="message"></label>
+
+
+                <input type="submit" value="Book">
+
+            </fieldset>
 
             </form>
 
