starting with footer styling

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -144,9 +144,9 @@
         <div class="resources"><a href="resources.html">Click Here to Go to The Resources used for this website</a>
         </div>
         <div class="social-media">
-            <img src="#" alt="facebook">
-            <img src="#" alt="instagram">
-            <img src="#" alt="x">
+            <img src="images/facebook-icon.svg" alt="facebook">
+            <img src="images/instagram-icon.svg" alt="instagram">
+            <img src="images/x-icon.svg" alt="x">
 
         </div>
 
