--- a/project/resources.html
+++ b/project/resources.html
@@ -49,6 +49,12 @@
 
                 </a></li>
 
+            <li><a href=""> Social Media Icons from:
+                    https://www.iconfinder.com/
+
+                </a></li>
+
+
 
 
 
