working on footer and form styling

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -109,24 +109,30 @@
 
         <section class="contact-form-section">
             <h3>Contact Us</h3>
-            <form method="get" action="contact.html" class="contact-us"></form>
-            <fieldset>
-                <label>Chosen Tour</label>
-                <select class="tour-name" name="tour-name" required>
-                    <option value="">Select a Tour &#9662;</option>
+            <form method="get" action="contact.html" class="contact-us">
+                <fieldset>
+                    <label>Chosen Tour</label>
+                    <select class="tour-name" name="tour-name" required>
+                        <option value="">Select a Tour &#9662;</option>
 
-                </select>
-                <label>Date<input type="date" name="excursionDate" required> </label>
-
-
-                <label> Name*<input type="text" name="name" required></label>
-
-                <label> Leave us your message (optional)<input type="text" name="message"></label>
+                    </select>
+                    <label>Date<input type="date" name="excursionDate" required> </label>
 
 
+                    <label> Name*<input type="text" name="name" required></label>
+                    <label> Email*<input type="email" name="email" required></label>
+                    <label> Phone Number*<input type="cel" name="phone" required></label>
+
+
+
+                    <label> Leave us your message (optional)<input type="text" name=message"></label>
+
+
+
+
+
+                </fieldset>
                 <input type="submit" value="Book">
-
-            </fieldset>
 
             </form>
 
@@ -149,6 +155,8 @@
             <img src="images/x-icon.svg" alt="x">
 
         </div>
+
+        <p> © Copyright 2025</p>
 
 
 
