working on sub-pages

--- a/project/resources.html
+++ b/project/resources.html
@@ -54,7 +54,18 @@
 
                 </a></li>
 
+            <li><strong>Author: Alex Azabache </strong><a href=""> dayTrips1 Image
+                    https://www.pexels.com/es-es/foto/llama-marron-sobre-campo-de-hierba-verde-cerca-de-la-montana-3879058/
 
+                </a></li>
+
+            <li><strong>Author: Daiana Paola Echevarría </strong><a href=""> dayTrips2 Image
+                    https://www.pexels.com/es-es/foto/mujer-tradicional-peruana-en-la-calle-del-cusco-30342450/
+                </a></li>
+
+            <li><strong>Author: BP </strong><a href=""> dayTrips3 Image
+                    https://www.pexels.com/es-es/foto/alimentos-cocidos-en-plato-de-ceramica-blanca-2739250/
+                </a></li>
 
 
 
