--- a/project/day-trips.html
+++ b/project/day-trips.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Final Project for WDD131- Web Fundamentals">
     <link rel="stylesheet" href="project.css">
     <script src="project.js" defer></script>
+    <script src="day-trips.js" defer></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Varela+Round&display=swap"
         rel="stylesheet">
@@ -28,81 +29,24 @@
         <nav>
             <ul class="menu">
                 <li><a href="cusco-travel-agency.html">Home</a></li>
-                <li><a href="day-trips.html">Day Trips</a></li>
-                <li><a href="inca-trail.html">Inca Trail</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="#">Day Trips</a></li>
+                <li><a href="#">Inca Trail</a></li>
+                <li><a href="#">About Us</a></li>
 
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Discover Cusco</h1>
-        <section class="hero">
-            <div class="hero-image">
-                <img src="images/hero1.jpg" loading="lazy">
-                <div class="text">Culture & History</div>
 
-            </div>
-            <div class="hero-image">
-                <img src="images/hero2.jpg" loading="lazy">
-                <div class="text">A life Experience</div>
+        <!-- Day Trips Section -->
 
-            </div>
-
-            <div class="hero-image">
-                <img src="images/hero3.jpg" loading="lazy">
-                <div class="text">World Heritage</div>
-
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+        <section class="day-trips">
 
         </section>
 
-        <!-- Tours Section buttons -->
-        <h2>Our Tours</h2>
-
-        <section class="tours-container">
 
 
-        </section>
-
-        <h2>What Our Customers say?</h2>
-        <section class="testimonials">
-
-
-
-
-
-        </section>
-
-        <div class="contact-us-section">
-            <section class="location">
-
-                <h3>Our Office</h3>
-                <div class="map">
-
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.87891274922!2d-71.97102751675362!3d-13.524847562815566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916dd5d826598431%3A0x2aa996cc2318315d!2zQ3VzY28sIFBlcsO6!5e0!3m2!1ses-419!2sar!4v1749604276524!5m2!1ses-419!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-                </div>
-            </section>
-            <section class="company-info">
-                <h3>Contact Information</h3>
-
-                <p><strong>Address</strong> Manco Pac Avenue 9000, Cusco City, Peru</p>
-                <p><strong>Phone Number</strong> +59-9-8990098</p>
-                <p><strong>Email Address</strong> sales@cusco-travel-agency.com</p>
-            </section>
-
-        </div>
 
         <!-- Contact Form -->
 
