working on about section

--- a/project/about-us.html
+++ b/project/about-us.html
@@ -38,6 +38,18 @@
 
     <main>
 
+        <section class="about">
+
+            <img src="images/team.jpg" alt="team-members" loading="lazy">
+            <p>We are proud to be a family owned company. Since 1994 we offer the best services in Cusco and
+                Surrounding areas. It started a dream and now we are happy to work with more than 20 guides and
+                drivers that enhance the experiences of thousand of visitors.
+
+            </p>
+
+
+        </section>
+
 
         <!-- Contact Form -->
 
