--- a/project/our-trips.html
+++ b/project/our-trips.html
@@ -29,9 +29,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="cusco-travel-agency.html">Home</a></li>
-                <li><a href="day-trips.html">Day Trips</a></li>
-                <li><a href="inca-trail.html">Inca Trail</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="#">Day Trips</a></li>
+                <li><a href="#">Inca Trail</a></li>
+                <li><a href="#">About Us</a></li>
 
             </ul>
         </nav>
