--- a/project/resources.html
+++ b/project/resources.html
@@ -67,6 +67,14 @@
                     https://www.pexels.com/es-es/foto/alimentos-cocidos-en-plato-de-ceramica-blanca-2739250/
                 </a></li>
 
+            <li><strong>Author: Marco Luigy</strong><a href=""> dayTrips4 Image
+                    https://www.pexels.com/es-es/foto/paisaje-montanas-punto-de-referencia-viaje-17857455/
+                </a></li>
+
+            <li><strong>Author: Christina Morillo </strong><a href=""> team Image
+                    https://www.pexels.com/es-es/foto/grupo-de-mujeres-de-pie-cerca-del-escritorio-1181438/
+                </a></li>
+
 
 
 
