working on inca-trail website

--- a/project/inca-trail.html
+++ b/project/inca-trail.html
@@ -38,19 +38,49 @@
 
     <main>
 
+        <h1>Inca Trail</h1>
+        <div class="tour-description-wrapper">
+            <div class="main-pic">
+                <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+            </div>
+            <section class="tour-picture">
+                <img src="images/incaTrail1.jpg" alt="inca-trail" loading="lazy">
+                <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
+                <h2>Full Experience</h2>
+            </section>
+            <section class="tour-description">
 
-        <!-- Contact Form -->
+                <div class="description-card">
+                    <h3>Itinerary</h3>
+                    <ul>
+                        <li><strong>Day 1</strong> </li>
+                        <li><strong>Day 2</strong> </li>
+                        <li><strong>Day 3</strong> </li>
+                        <li><strong>Day 4</strong> </li>
+                        <li><strong>Day 5</strong> </li>
 
+                    </ul>
+                </div>
+                <div class="description-card">
+                    <h3>Included</h3>
+                    <p> Transport , Professional Tourist Guide to accompany the group, meals</p>
+                </div>
+                <div class="description-card">
+                    <h3>Not Included</h3>
+                    <p> Trekking Equipment</p>
+                </div>
+            </section>
+
+
+
+
+        </div>
 
         <section class="contact-form-section">
-            <h3>Contact Us</h3>
+            <h3>Save your Date!</h3>
             <form method="get" action="contact.html" class="contact-us">
                 <fieldset>
-                    <label>Chosen Tour</label>
-                    <select class="tour-name" name="tour-name" required>
-                        <option value="">Select a Tour &#9662;</option>
 
-                    </select>
                     <label>Date<input type="date" name="excursionDate" required> </label>
 
 
@@ -73,6 +103,15 @@
 
 
         </section>
+
+
+
+
+
+
+
+
+
 
 
 
