--- a/project/resources.html
+++ b/project/resources.html
@@ -75,6 +75,28 @@
                     https://www.pexels.com/es-es/foto/grupo-de-mujeres-de-pie-cerca-del-escritorio-1181438/
                 </a></li>
 
+            <li><strong>Author: LoggaWiggler </strong><a href=""> incaTrail1 Image
+                    https://pixabay.com/es/photos/machu-picchu-restos-ciudad-en-ruinas-43394/
+
+                </a></li>
+
+            <li><strong>Author: jcalvareztaboada </strong><a href=""> incaTrail2 Image
+                    https://pixabay.com/es/photos/naturaleza-niebla-viaje-per%C3%BA-cusco-7113900/
+
+                </a></li>
+
+            <li><strong>Author: KarloManson </strong><a href=""> mainIncaTrail Image
+                    https://pixabay.com/es/photos/machu-picchu-peru-cusco-piedras-2608854/
+
+                </a></li>
+
+
+
+
+
+
+
+
 
 
 
