working on inca trail page

--- a/project/inca-trail.html
+++ b/project/inca-trail.html
@@ -39,35 +39,59 @@
     <main>
 
         <h1>Inca Trail</h1>
+
+        <div class="main-pic">
+            <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+        </div>
+
+
+
+
         <div class="tour-description-wrapper">
-            <div class="main-pic">
-                <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
-            </div>
+
             <section class="tour-picture">
-                <img src="images/incaTrail1.jpg" alt="inca-trail" loading="lazy">
-                <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
-                <h2>Full Experience</h2>
+
+
+                <h2>Itinerary</h2>
+
+                <p>
+                <ul>
+                    <li><strong>Day 1</strong> Departure from Cusco City and 6 hours trekking towards Aguas
+                        Calientes.
+                        Accomodation in Aguas Calientes</li>
+                    <li><strong>Day 2</strong> Transport from Aguas Calientes to Machu Pichu. Lunch at Machu Pichu
+                        Restaurant. Dinner and Accomodation in Aguas Calientes</li>
+                    <li><strong>Day 3</strong> 6 hours trekking to Wiñayhuayna. Box lunch during the trekking.
+                        Accomodation and dinner at Wiñayhuayna</li>
+                    <li><strong>Day 4</strong> 3 hours Trekking to Salkantay viewpoint. Lunch and dinner at
+                        viewpoint
+                    </li>
+                    <li><strong>Day 5</strong> 3 hours Trekking to Cusco. Free Afternoon and team dinner at local
+                        Restaurant</li>
+
+                </ul>
+                </p>
+
             </section>
+
             <section class="tour-description">
 
-                <div class="description-card">
-                    <h3>Itinerary</h3>
-                    <ul>
-                        <li><strong>Day 1</strong> </li>
-                        <li><strong>Day 2</strong> </li>
-                        <li><strong>Day 3</strong> </li>
-                        <li><strong>Day 4</strong> </li>
-                        <li><strong>Day 5</strong> </li>
 
-                    </ul>
-                </div>
                 <div class="description-card">
                     <h3>Included</h3>
-                    <p> Transport , Professional Tourist Guide to accompany the group, meals</p>
+                    <ul>
+                        <li>Transport</li>
+                        <li>Bilingual Guide</li>
+                        <li>Meals, mineral water</li>
+                    </ul>
+
                 </div>
                 <div class="description-card">
                     <h3>Not Included</h3>
-                    <p> Trekking Equipment</p>
+                    <ul>
+                        <li>Flights</li>
+                        <li>Accomodation at Cusco</li>
+                    </ul>
                 </div>
             </section>
 
