working on inca trail page

--- a/project/inca-trail.html
+++ b/project/inca-trail.html
@@ -39,9 +39,16 @@
     <main>
 
         <h1>Inca Trail</h1>
-
-        <div class="main-pic">
-            <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+        <div class="gallery">
+            <div class="main-pic">
+                <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+            </div>
+            <div class="main-pic">
+                <img src="images/incaTrail1.jpg" alt="inca-trail" loading="lazy">
+            </div>
+            <div class="main-pic">
+                <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
+            </div>
         </div>
 
 
