working on inca trail page

--- a/project/inca-trail.html
+++ b/project/inca-trail.html
@@ -40,14 +40,41 @@
 
         <h1>Inca Trail</h1>
         <div class="gallery">
-            <div class="main-pic">
-                <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+            <div class="gallery-inner">
+                <div class="main-pic">
+                    <img src="images/mainIncaTrail.jpg" alt="inca-trail" loading="lazy">
+                </div>
+                <div class="gallery-back">
+                    <h4>The real experience!</h4>
+                    <p>Explore nature and Inca Culture at the same time</p>
+                    <p>Join the adventure of your life</p>
+
+                </div>
             </div>
-            <div class="main-pic">
-                <img src="images/incaTrail1.jpg" alt="inca-trail" loading="lazy">
+            <div class="gallery-inner">
+                <div class="main-pic">
+                    <img src="images/incaTrail1.jpg" alt="inca-trail" loading="lazy">
+                </div>
+                <div class="gallery-back">
+                    <h4>No experiece required</h4>
+                    <p>Rent the equipment for an additional price</p>
+                    <p>Buy it with the best available insurance</p>
+
+                </div>
+
             </div>
-            <div class="main-pic">
-                <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
+            <div class="gallery-inner">
+                <div class="main-pic">
+                    <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
+                </div>
+                <div class="gallery-back">
+                    <h4>First Peru Awarded Travel Agency </h4>
+                    <p>Best Experience 2000</p>
+                    <p>Environment Award 2019</p>
+
+                </div>
+
+
             </div>
         </div>
 
