working on sub-pages

--- a/project/resources.html
+++ b/project/resources.html
@@ -90,6 +90,17 @@
 
                 </a></li>
 
+            <li><strong>Author: Tracy Hudson </strong><a href=""> incaTrail4 Image
+                    https://www.pexels.com/es-es/foto/foto-del-hombre-parado-cerca-de-la-llama-2424395/
+
+                </a></li>
+
+            <li><strong>Author: Anyela Malaga</strong><a href=""> privateTours Image
+                    https://www.pexels.com/es-es/foto/plaza-historica-de-cusco-con-torre-y-escena-callejera-31841523/
+
+                </a></li>
+
+
 
 
 
