--- a/project/our-trips.html
+++ b/project/our-trips.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Final Project for WDD131- Web Fundamentals">
     <link rel="stylesheet" href="project.css">
     <script src="project.js" defer></script>
-    <script src="day-trips.js" defer></script>
+    <script src="our-trips.js" defer></script>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Varela+Round&display=swap"
         rel="stylesheet">
@@ -29,9 +30,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="cusco-travel-agency.html">Home</a></li>
-                <li><a href="#">Day Trips</a></li>
-                <li><a href="#">Inca Trail</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="day-trips.html">Day Trips</a></li>
+                <li><a href="inca-trail.html">Inca Trail</a></li>
+                <li><a href="about-us.html">About Us</a></li>
 
             </ul>
         </nav>
@@ -41,7 +42,7 @@
 
         <!-- Day Trips Section -->
 
-        <section class="day-trips">
+        <section class="all-trips">
 
         </section>
 
