ending private tours page and starting to troubleshoot

--- a/project/resources.html
+++ b/project/resources.html
@@ -102,6 +102,12 @@
 
 
 
+            <li>
+                <stron>Author: Sarai Carrasco</stron><a href=""> privateTours2 Image
+                    https://www.pexels.com/es-es/foto/banco-pared-muro-sentado-20453587/
+                </a>
+            </li>
+
 
 
 
