ending js debbug

--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -71,6 +71,8 @@
 
         </section>
 
+        <!-- Testimonials -->
+
         <h2>What Our Customers say?</h2>
         <section class="testimonials">
 
