--- a/project/resources.html
+++ b/project/resources.html
@@ -5,27 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="resources.css">
 </head>
 
 <body>
     <header>
-
+        <h1>Resource List</h1>
     </header>
     <main>
+        <h2> Jonathan Villegas | WDD131 | Final Project </h2>
 
         <ul>
-            <h1>Resource List</h1>
-            <li> <strong>Author: Jaesung An</strong><a href="">Hero1
-                    Image</a>https://pixabay.com/es/photos/per%C3%BA-machu-picchu-am%C3%A9rica-del-sur-3978148/</li>
-            <li> <strong>Author: Patricia van den Berg</strong><a href="">Hero 2
-                    Image</a>https://pixabay.com/es/photos/cusco-plaza-del-armas-per%C3%BA-3418555/</li>
+
+            <li> <strong>Author: Jaesung An</strong><a href=""> Hero1
+                    Image</a> https://pixabay.com/es/photos/per%C3%BA-machu-picchu-am%C3%A9rica-del-sur-3978148/</li>
+            <li> <strong>Author: Patricia van den Berg</strong><a href=""> Hero 2
+                    Image</a> https://pixabay.com/es/photos/cusco-plaza-del-armas-per%C3%BA-3418555/</li>
             <li> <strong>Author: Renzonapa</strong><a href="">Hero 3
-                    Image</a>https://pixabay.com/es/photos/cusco-calle-per%C3%BA-plaza-de-armas-143561/
+                    Image</a> https://pixabay.com/es/photos/cusco-calle-per%C3%BA-plaza-de-armas-143561/
             </li>
-            <li><strong>Author: Sarai Carrasco</strong><a href="">Tours-1 Image,
+            <li><strong> Author: Sarai Carrasco</strong><a href=""> Tours-1 Image,
                     https://www.pexels.com/es-es/foto/banco-pared-muro-sentado-20453588/
                 </a></li>
-            <li><strong>Author: Paolo Salazar</strong><a href="">Tours-2 Image,
+            <li><strong>Author: Paolo Salazar</strong><a href=""> Tours-2 Image,
                     https://www.pexels.com/es-es/foto/machu-picchu-13080580/
 
                 </a></li>
@@ -103,7 +105,7 @@
 
 
             <li>
-                <stron>Author: Sarai Carrasco</stron><a href=""> privateTours2 Image
+                <strong>Author: Sarai Carrasco</strong><a href=""> privateTours2 Image
                     https://www.pexels.com/es-es/foto/banco-pared-muro-sentado-20453587/
                 </a>
             </li>
