ending spelling errors correction

--- a/project/about-us.html
+++ b/project/about-us.html
@@ -41,9 +41,9 @@
         <section class="about">
 
             <img src="images/team.jpg" alt="team-members" loading="lazy">
-            <p>We are proud to be a family owned company. Since 1994 we offer the best services in Cusco and
-                Surrounding areas. It started a dream and now we are happy to work with more than 20 guides and
-                drivers that enhance the experiences of thousand of visitors.
+            <p>We are proud to be a family-owned company. Since 1994, we offer the best services in Cusco and
+                surrounding areas. It all started as a dream and now we are happy to work with more than 20 guides and
+                drivers that enhance the experiences of thousands of visitors.
 
             </p>
 
@@ -72,7 +72,7 @@
 
 
 
-                    <label> Leave us your message (optional)<input type="text" name=message"></label>
+                    <label> Leave us a message (optional)<input type="text" name=message"></label>
 
 
 
