--- a/project/cusco-travel-agency.html
+++ b/project/cusco-travel-agency.html
@@ -73,7 +73,7 @@
 
         <!-- Testimonials -->
 
-        <h2>What Our Customers say?</h2>
+        <h2>What Our Customers Say?</h2>
         <section class="testimonials">
 
 
@@ -127,7 +127,7 @@
 
 
 
-                    <label> Leave us your message (optional)<input type="text" name=message"></label>
+                    <label> Leave us a message (optional)<input type="text" name=message"></label>
 
 
 
@@ -149,7 +149,7 @@
 
     </main>
     <footer>
-        <div class="resources"><a href="resources.html">Click Here to Go to The Resources used for this website</a>
+        <div class="resources"><a href="resources.html">Click here to see the resources used for this website</a>
         </div>
         <div class="social-media">
             <img src="images/facebook-icon.svg" alt="facebook">
