--- a/project/inca-trail.html
+++ b/project/inca-trail.html
@@ -68,9 +68,9 @@
                     <img src="images/incaTrail2.jpg" alt="inca-trail" loading="lazy">
                 </div>
                 <div class="gallery-back">
-                    <h4>First Peru Awarded Travel Agency </h4>
-                    <p>Best Experience 2000</p>
-                    <p>Environment Award 2019</p>
+                    <h4>First Awarded Travel Agency in Peru </h4>
+                    <p>Best Experience Award 2000</p>
+                    <p>Environmental Award 2019</p>
 
                 </div>
 
@@ -92,11 +92,11 @@
                 <ul>
                     <li><strong>Day 1</strong> Departure from Cusco City and 6 hours trekking towards Aguas
                         Calientes.
-                        Accomodation in Aguas Calientes</li>
+                        Accommodation in Aguas Calientes</li>
                     <li><strong>Day 2</strong> Transport from Aguas Calientes to Machu Pichu. Lunch at Machu Pichu
-                        Restaurant. Dinner and Accomodation in Aguas Calientes</li>
+                        Restaurant. Dinner and Accommodation in Aguas Calientes</li>
                     <li><strong>Day 3</strong> 6 hours trekking to Wiñayhuayna. Box lunch during the trekking.
-                        Accomodation and dinner at Wiñayhuayna</li>
+                        Accommodation and dinner at Wiñayhuayna</li>
                     <li><strong>Day 4</strong> 3 hours Trekking to Salkantay viewpoint. Lunch and dinner at
                         viewpoint
                     </li>
@@ -148,7 +148,7 @@
 
 
 
-                    <label> Leave us your message (optional)<input type="text" name=message"></label>
+                    <label> Leave us a message (optional)<input type="text" name=message"></label>
 
 
 
@@ -179,7 +179,7 @@
 
     </main>
     <footer>
-        <div class="resources"><a href="resources.html">Click Here to Go to The Resources used for this website</a>
+        <div class="resources"><a href="resources.html">Click here to see the resources used for this website</a>
         </div>
         <div class="social-media">
             <img src="images/facebook-icon.svg" alt="facebook">
