ending details before submission

--- a/project/day-trips.html
+++ b/project/day-trips.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131- Final Project</title>
+    <title>Day Trips - WDD131- Final Project</title>
     <meta name="author" content="Jonathan Villegas">
-    <meta name="description" content="Final Project for WDD131- Web Fundamentals">
+    <meta name="description" content="Day Trips Page for Final Project for WDD131- Web Fundamentals">
     <link rel="stylesheet" href="project.css">
     <script src="project.js" defer></script>
     <script src="day-trips.js" defer></script>
