--- a/project/resources.html
+++ b/project/resources.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resources used for Final Project WDD131</title>
     <link rel="stylesheet" href="resources.css">
+    <meta name="author" content="Jonathan Villegas">
+    <meta name="description" content="Resources used for WDD131 Final Project">
 </head>
 
 <body>
@@ -16,6 +18,9 @@
         <h2> Jonathan Villegas | WDD131 | Final Project </h2>
 
         <ul>
+
+
+            <li><strong>Logo</strong>Self made at Inkscape</li>
 
             <li> <strong>Author: Jaesung An</strong><a href=""> Hero1
                     Image</a> https://pixabay.com/es/photos/per%C3%BA-machu-picchu-am%C3%A9rica-del-sur-3978148/</li>
