--- a/project/about-us.html
+++ b/project/about-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD131- Final Project</title>
     <meta name="author" content="Jonathan Villegas">
-    <meta name="description" content="Final Project for WDD131- Web Fundamentals">
+    <meta name="description" content="About Us Page for Final Project for WDD131- Web Fundamentals">
     <link rel="stylesheet" href="project.css">
     <script src="project.js" defer></script>
     <link
