--- a/project/our-trips.html
+++ b/project/our-trips.html
@@ -70,7 +70,7 @@
 
 
 
-                    <label> Leave us your message (optional)<input type="text" name=message"></label>
+                    <label> Leave us a message (optional)<input type="text" name=message"></label>
 
 
 
@@ -92,7 +92,7 @@
 
     </main>
     <footer>
-        <div class="resources"><a href="resources.html">Click Here to Go to The Resources used for this website</a>
+        <div class="resources"><a href="resources.html">Click here to see the resources used for this website</a>
         </div>
         <div class="social-media">
             <img src="images/facebook-icon.svg" alt="facebook">
